<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">cIRCe</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_new_server">New Server</string>
    <string name="action_accept_server">Create Server</string>
    <string name="action_show_user_list">Show Users</string>
    <string name="action_open_macro">Macro Editor</string>
    <string name="action_delete_server">Delete Server</string>
    <string name="action_edit_server">Edit Server</string>
    <string name="action_add_macro">Add Macro</string>
    <string name="action_delete_macro">Delete Macro</string>
    <string name="action_rename_macro">Rename Macro</string>
    <string name="action_save_macro">Save Macro</string>
    
    <string name="title_server_list">Server List</string>
    <string name="title_add_server">Add Server</string>
    <string name="title_macro_list">Macro List</string>
    
    <string name="list_frag_loading">Loading…</string>
    
    <string name="grid_macro_default">Macro</string>
    
    <string name="button_send">Send</string>
    <string name="button_raw_submit">Add Command</string>
    <string name="button_submit">Submit</string>
    
    <string name="not_impl">Feature Not Implemented</string>
    
    <string name="error_no_server_name">Server Name must not be left blank.</string>
    <string name="error_no_server_address">Server address must be in irc.server.tld form and not be blank.</string>
    <string name="error_bad_port">Empty or invalid port, default of 6666 is assumed.</string>
    <string name="error_no_username">A username is required.</string>
    <string name="error_no_input">Input must not be left blank.</string>
    
    <string name="label_server_name">Server Name</string>
    <string name="label_server_address">Server Address</string>
    <string name="label_server_port">Port</string>
    <string name="label_server_logging">Chat Logging</string>
    <string name="label_username">User Name</string>
    <string name="label_password">Password</string>
    
    
    <string name="hint_param">Enter Parameter</string>
    <string name="hint_server_name">e.g. "Quakenet"</string>
    <string name="hint_server_address">e.g. "irc.quakenet.org"</string>
    <string name="hint_server_port">6667</string>
    <string name="hint_username">e.g. "IRCUser123"</string>
    
    
    <string name="pref_launch_log_viewer">Chat Log Viewer</string>
    <string name="pref_log_directory">Default Log Directory</string>
    <string name="pref_notification_screen">Notification Settings</string>
    <string name="pref_notify_on_highlight">Notify On Highlight</string>
    <string name="pref_notify_on_query">Notify on Private Message</string>
    <string name="pref_notify_vibrate_sound_mode">Sound and Vibration Settings</string>
    <string name="pref_notify_ring_tone">Notification Sound</string>
    <string name="pref_default_server_settings">Server Defaults</string>
    <string name="pref_default_username">Default Username</string>
    <string name="pref_default_logging">Default Logging</string>

    <string name="pref_summary_launch_log_viewer">Launch the log viewer to display previously recorded chat logs.</string>
    <string name="pref_summary_log_directory">Default location in storage where chat logs will be saved and viewed.</string>
    <string name="pref_summary_notify_on_highlight">If selected, notifications will be sent whenever your current nickname appears in any of the IRC windows opened.</string>
    <string name="pref_summary_notify_on_query">If selected, notifications will be sent whenever you receive a private message.</string>
    <string name="pref_summary_notify_ring_tone">Sound to be played for notifcations.</string>
    <string name="pref_summary_default_username">Default username to be used when creating servers.</string>
    <string name="pref_summary_default_logging">If selected, logging will be enabled by default when creating servers.</string>
   
    
    <string name="pref_cat_logging">Chat Log Settings</string>
    <string name="pref_cat_notify_types">Notification Types</string>
    <string name="pref_cat_general_settings">General Settings</string>
    
    <string name="toast_server_created">Server Created</string>
	
</resources>
